authentication ve authorization yapıldı

--- a/CarPark.User/appsettings.json
+++ b/CarPark.User/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "MongoConnection": {
-    "ConnectionString": "mongodb+srv://mahmut1:1234@carparkcluster.wweao.mongodb.net/CarParkDB?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb+srv://fmacit0640:fmacit.mongo@carparkcluster.fzquzd4.mongodb.net/?retryWrites=true&w=majority&tls=true&tlsAllowInvalidCertificates=true&appName=CarParkCluster",
     "Database": "CarParkDB"
   }
 }
